fix: no longer have overflowing elements

--- a/scripts/content.css
+++ b/scripts/content.css
@@ -131,4 +131,5 @@
     border-radius: 8px;
     width: 300px;
     visibility: visible;
+    overflow: auto;
 }
